--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -4,17 +4,17 @@
 #   The weight parameter defines the order that the links will appear in.
 
 [[main]]
-  name = "Demo"
-  url = "#hero"
+  name = "Home"
+  url = "#about"
   weight = 10
 
 [[main]]
-  name = "Posts"
+  name = "Experience"
   url = "#posts"
   weight = 20
 
 [[main]]
-  name = "Projects"
+  name = "Blogs"
   url = "#projects"
   weight = 30
 
