--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -11,6 +11,11 @@
 [[main]]
   name = "Skills"
   url = "#skills"
+  weight = 15
+
+[[main]]
+  name = "Experience"
+  url = "#experience"
   weight = 20
 
 [[main]]
@@ -20,18 +25,13 @@
 
 [[main]]
   name = "Publications"
-  url = "#featured"
+  url = "#publications"
   weight = 40
-
-[[main]]
-  name = "Courses"
-  url = "courses/"
-  weight = 50
 
 [[main]]
   name = "Contact"
   url = "#contact"
-  weight = 60
+  weight = 50
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/files/cv.pdf` and uncomment the lines below.
