--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -19,6 +19,11 @@
   weight = 20
 
 [[main]]
+  name = "Publications"
+  url = "#publications"
+  weight = 20
+
+[[main]]
   name = "Contact"
   url = "#contact"
   weight = 50
