--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -90,7 +90,7 @@ show_related = {docs = true, page = false, post = true, project = true, publicat
 # Enter contact details (optional). To hide a field, clear it to "".
 
 phone = "+86 13001390028"
-email = "2011091029@nbu.edu.cn"
+email = "pengzhang1998@zju.edu.cn"
 
 # Address
 # For country_code, use the 2-letter ISO code (see https://en.wikipedia.org/wiki/ISO_3166-1_alpha-2 )
